# pyweek39

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
assets/blender/: duck.egg
shaders/: A_frag.frag  B_frag.frag  C_frag.frag  D_frag.frag  final_frag.frag  final_vert.vert
