[project]
name = "river"
version = "0.1.0"
description = ""
authors = [
    {name = "omn14",email = "sirole@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "panda3d (>=1.10.15,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false